@@ -1,5 +1,11 @@
 2001-07-24  Radek Doulik  <rodo@ximian.com>
 
+	* htmlengine-edit-table.c (html_engine_get_table): don't fail,
+	just return NULL
+
+	* htmlengine-edit-tablecell.c (html_engine_get_table_cell): don't
+	fail, just return NULL
+
 	* htmlengine-edit-cut-and-paste.c (append_object): remove unwanted
 	empty flows, fix cursor position
 
